of that version.

For more details, three sources are available according to type:
 - [ n ], please see https://hg.python.org/jython.
 - [ GH-n ], please see https://github.com/jython/jython.
 - [ FM-n ], please see https://github.com/jython/frozen-mirror.


Jython 2.7.3a1
  Bugs fixed
    - [ GH-122 ] Upgrade Apache commons-compress to 1.21
    - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
    - [ GH-50 ] (First) migration from Mercurial corrupted project history
    - [ GH-27 ] -Q new always fails
    - [ 2892 ] Migrate from hg.python.org to GitHub
    - [ GH-4 ] Swap from Mercurial to Git as our SCM tool
    - [ GH-2 ] Transfer closed-fixed issues in NEWS from frozen-mirror

  New Features
    - The project has moved its home to GitHub (twice).

Jython 2.7.2
  same as 2.7.2rc1

Jython 2.7.2rc1
  Bugs fixed
    - [ 2858 ] test_ssl failure due to embedding Bouncy Castle (doc change only)
    - [ FM-156 ] Race condition in PyStringMap keys method
    - [ 2862 ] Jython fails on Linux for normal user when installed by root

Jython 2.7.2b3
  Bugs fixed
    - [ 2810 ] NoSuchMethodError in test_jython_initializer (Java 10+)
    - [ 2808 ] lib2to3 test failures on Windows JDK 11
    - [ 2846 ] Main module __name __ is not "__main__" under Java Scripting API
    - [ 2828 ] Update netty JARs to 4.1.45
    - [ 2044 ] CVE-2013-2027 Current umask sets privileges of class files and cache
    - [ 2834 ] Import of Java classes is not thread safe
    - [ 2820 ] Import fails with UnicodeDecodeError if sys.path contains invalid UTF-8 bytes
    - [ 2826 ] Unicode hex string decode failure
    - [ 2836 ] Java Swing library works only in interactive jython session

Jython 2.7.2b2
  Bugs fixed
    - [ 2814 ] maven/build.xml does not PGP-sign the publication
2)
Jython 2.7.2b1
  Bugs fixed
    - [ 2806 ] Installer contains dependencies unshaded (Java 8)
    - [ 2666 ] Oracle JDK 7 out of support so no longer available on Travis