@@ -187,6 +187,7 @@ Jython in ways large and small, in no particular order:
     Jim Peterson
     Christian Clauss
     Han Siang Phua
+    Thierry Guérin
 
 Local Variables:
 mode: indented-text
